// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabCardView/config.js value startDate should return a particular shape of array given the props provided 1`] = `
Array [
  "nodeStore",
  "nodes",
  1,
  "customData",
  "startDate",
]
`;

exports[`TabCardView/config.js value tabChildren should return a particular shape of array given the props provided 1`] = `
Array [
  "nodeStore",
  "nodes",
  1,
  "children",
]
`;
